--- a/FrontEnd/templates/reset_PSW.html
+++ b/FrontEnd/templates/reset_PSW.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,6 +29,6 @@
 		</div>
 	</div>
 
-	<script src="validation.js" type="text/javascript"></script>
+	<script src="../validation.js" type="text/javascript"></script>
 </body>
 </html>
