--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -79,7 +79,7 @@
 
 <div class="container">
     <div class="text-center mb-4">
-        <img src="images/ha.png" alt="Image" class="img-fluid mb-4 mx-auto " style="max-width: 100px;">
+        <img src="static/images/ha.png" alt="Image" class="img-fluid mb-4 mx-auto " style="max-width: 100px;">
         <h1 class="h3 mb-3 font-weight-normal">Create an Account</h1>
     </div>
 
@@ -116,7 +116,7 @@
     </form>
 
     <div class="text-center mt-4">
-        <a href="/login.html" class="help-link">Already have an account? Sign in</a>
+        <a href="/login" class="help-link">Already have an account? Sign in</a>
     </div>
 
     <div class="help-block mt-2">
