connection and static errors fixed.

--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="help-block mt-2">
-        <span class="tp mb-5 mt-10"><a href="/terms" style="color: #0000006a;">Terms of Use</a> | <a href="/PrivacyPolicy.html"
+        <span class="tp mb-5 mt-10"><a href="/static/terms.html" style="color: #0000006a;">Terms of Use</a> | <a href="/static/policy.html"
                                                                                                      style="color: #0000006a;">Privacy Policy</a></span>
     </div>
 </div>
