--- a/FrontEnd/templates/dashboard.html
+++ b/FrontEnd/templates/dashboard.html
@@ -635,9 +635,9 @@
         <!-- Delete Confirmation Modal -->
         <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Deletion</h5>
+                <div class="modal-content rounded-lg" style="background-color: #EEECE3; color: #000000;">
+                    <div class="modal-header" style="border-bottom: none;">
+                        <h5 class="modal-title" id="deleteConfirmationModalLabel" style="color: #AF6141;">Confirm Deletion</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -645,9 +645,9 @@
                     <div class="modal-body">
                         Are you sure you want to delete this device?
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-danger" id="confirmDelete">Delete</button>
+                    <div class="modal-footer" style="border-top: none;">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="background-color: rgba(175, 97, 65, 0.89); color: #ffffff;">Cancel</button>
+                        <button type="button" class="btn btn-danger" id="confirmDelete" style="background-color: rgba(175, 97, 65, 0.89);">Delete</button>
                     </div>
                 </div>
             </div>
